# madengine-glog-fork

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPER_GUIDE.md  README.md  pyproject.toml  setup.py
.glog/: glog-scan.sarif
docs/: distributed-execution-solution.md  how-to-build.md  how-to-collect-competitive-library-perf.md  how-to-contribute.md  how-to-profile-a-model.md  how-to-provide-contexts.md  how-to-quick-start.md  how-to-run-multi-node.md  madengine-cli-guide.md
runners/ssh/: README.md  __init__.py  config.ini  config.ini.example  config_manager.py  example.sh  monitoring.py  quick-start.sh  requirements.txt  run.py  ssh_client_manager.py  test_runner.py  utils.py
src/madengine/: __init__.py  distributed_cli.py  mad.py  mad_cli.py
src/madengine/core/: console.py  constants.py  context.py  dataprovider.py  docker.py  errors.py  timeout.py
src/madengine/db/: base_class.py  database.py  database_functions.py  db_table_def.sql  logger.py  relative_perf.py  upload_csv_to_db.py  utils.py
src/madengine/runners/: __init__.py  ansible_runner.py  base.py  factory.py  k8s_runner.py  orchestrator_generation.py  slurm_runner.py  ssh_runner.py  template_generator.py
src/madengine/runners/templates/ansible/: playbook.yml.j2
src/madengine/runners/templates/k8s/: configmap.yaml.j2  job.yaml.j2  namespace.yaml.j2  service.yaml.j2
src/madengine/runners/templates/slurm/: inventory.yml.j2  job_array.sh.j2  setup_environment.sh.j2  single_job.sh.j2
src/madengine/runners/values/: default.yaml  dev.yaml  prod.yaml  slurm.yaml  test.yaml
src/madengine/scripts/common/: test_echo.sh  tools.json
src/madengine/scripts/common/post_scripts/: gpu_info_post.sh  post_test.sh  trace.sh
src/madengine/scripts/common/pre_scripts/: gpu_info_pre.sh  miopen_build_latest.sh  pre_test.sh  run_rocenv_tool.sh  trace.sh
src/madengine/scripts/common/pre_scripts/rocEnvTool/: README.md  console.py  csv_parser.py  env_tags.json  rocenv_tool.py
src/madengine/scripts/common/tools/: get_library_trace.py  gpu_info_profiler.py  pynvml_utils.py  rocm_smi_utils.py
src/madengine/tools/: container_runner.py  create_table_db.py  csv_to_email.py  csv_to_html.py  discover_models.py  distributed_cli.py  distributed_orchestrator.py  docker_builder.py  run_models.py  update_perf_csv.py  update_table_db.py  upload_mongodb.py
src/madengine/utils/: log_formatting.py  ops.py  ssh_to_db.py
tests/: test_cli_error_integration.py  test_console.py  test_container_runner.py  test_contexts.py  test_custom_timeouts.py  test_data_provider.py  test_debugging.py  test_discover.py  test_distributed_cli.py  test_distributed_integration.py  test_distributed_integration_realistic.py  test_distributed_orchestrator.py  test_distributed_pre_post_profiling.py  test_docker_builder.py  test_error_handling.py  test_error_system_integration.py  test_live_output.py  test_mad.py  test_mad_cli.py  test_misc.py  test_multi_gpu_arch.py  test_packaging.py  test_pre_post_scripts.py  test_profiling.py  test_runner_errors.py  test_runners_base.py  test_tags.py  test_templates.py
tests/fixtures/: utils.py
tests/fixtures/dummy/: credential.json  data.json  models.json
tests/fixtures/dummy/docker/: dummy.ubuntu.amd.Dockerfile  dummy.ubuntu.nvidia.Dockerfile  dummy_ctxtest.ctx1.ubuntu.amd.Dockerfile  dummy_ctxtest.ctx2a.ubuntu.amd.Dockerfile  dummy_ctxtest.noctx.ubuntu.amd.Dockerfile
tests/fixtures/dummy/scripts/dummy/: run_cpu_bind.sh  run_ctxtest.sh  run_data_local.sh  run_data_nas.sh  run_fail.sh  run_gpu_bind.sh  run_multi.sh  run_nccl_trace.sh  run_prof.sh  run_sleep.sh
tests/fixtures/dummy/scripts/dummy2/: models.json  run.sh
tests/fixtures/dummy/scripts/dummy3/: get_models_json.py
tests/fixtures/dummy/scripts/dummy3/docker/: dummy.ubuntu.amd.Dockerfile  dummy.ubuntu.nvidia.Dockerfile
